--- a/index.html
+++ b/index.html
@@ -458,7 +458,6 @@
                 <div class="badges">
                     <span class="badge blue">TD-Store</span>
                     <span class="badge green">Version 1.0.0</span>
-                    <span class="badge gold">Premium License</span>
                 </div>
             </div>
         </div>
@@ -472,13 +471,12 @@
                 <!-- Overview Section -->
                 <div id="overview" class="content-section active">
                     <div class="info-box">
-                        <p><strong>TD-Store</strong> is a premium FiveM store system that provides a modern, feature-rich in-game store experience with Tebex integration, vehicle garage management, and a comprehensive credit system. Built with security and performance in mind, it offers both players and administrators powerful tools for managing virtual economies.</p>
+                        <p><strong>TD-Store</strong> is a FiveM store system that provides a modern, feature-rich in-game store experience with Tebex integration, vehicle garage management, and a comprehensive credit system. Built with security and performance in mind, it offers both players and administrators powerful tools for managing virtual economies.</p>
                     </div>
 
                     <h2><span class="emoji">🚀</span> Key Highlights</h2>
                     <ul>
-                        <li><strong>Modern Architecture</strong> - Built with Lua 5.4 and modern FiveM standards</li>
-                        <li><strong>Enterprise Security</strong> - Anti-cheat protection and ownership validation</li>
+                        <li><strong>Security</strong> - Anti-cheat protection and ownership validation</li>
                         <li><strong>Tebex Integration</strong> - Seamless payment processing and webhook handling</li>
                         <li><strong>Beautiful UI</strong> - Responsive, modern interface with dark theme</li>
                         <li><strong>Comprehensive Logging</strong> - Discord webhook integration for monitoring</li>
@@ -515,7 +513,7 @@
 
                     <h3>Step 1: Download and Extract</h3>
                     <ol>
-                        <li>Download TD-Store from your purchase source</li>
+                        <li>Download TD-Store from your cfx assets</li>
                         <li>Extract the archive to your server's <code>resources</code> folder</li>
                         <li>Ensure the folder structure is: <code>resources/td-store/</code></li>
                     </ol>
